syntax = "proto3";
package protomsg;

message LocalizeRequest {
  string dataspace = 1;
}

message RegistrationRequest {
  bool isAdd = 1;
  bool isOrigin = 2;
  string datafield = 3;
}

message ConnectionRequest {
  bool isLogOn = 1;
  string swarmID = 2;
  string originID = 3;
}

message RouterWrapper {
  int32 type = 1;
  bytes request = 2;
}

message NegotiateMessage {
  bool isAccepted = 1;
  bytes messageData = 2;
  //Extra fields that will be used by negotiating parties
}
